<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">NATtester</string>
    <string name="menu_settings">NOP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_nat_timeout">NAT timeout</string>
    <string name="menu_port_timeout">Port timeout</string>
    <string name="menu_random">Random</string>
    <string name="menu_random_norecv">RandomScan</string>
    <string name="menu_random_nostun">RandomNoStun</string>
    <string name="symmetric_nat_traverse_ports">symmetric_nat_traverse_ports</string>
    <string name="menu_benchmark">Bench</string>
    <string name="menu_sampling">Sampling</string>
</resources>
